infra/network-policies/dev-allow-ingress-from-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"dev-allow-ingress-from-ingress-nginx","namespace":"dev"},"spec":{"ingress":[{"from":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.name":"ingress-nginx"}}}],"ports":[{"port":80,"protocol":"TCP"},{"port":443,"protocol":"TCP"},{"port":8080,"protocol":"TCP"},{"port":8000,"protocol":"TCP"},{"port":8089,"protocol":"TCP"}]}],"podSelector":{},"policyTypes":["Ingress"]}}
  creationTimestamp: "2026-01-31T15:00:49Z"
  generation: 1
  name: dev-allow-ingress-from-ingress-nginx
  namespace: dev
  resourceVersion: "1769871649993759009"
  uid: 204f7eea-1d5e-4b52-8c2c-8533d1e0654e
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    ports:
    - port: 80
      protocol: TCP
    - port: 443
      protocol: TCP
    - port: 8080
      protocol: TCP
    - port: 8000
      protocol: TCP
    - port: 8089
      protocol: TCP
  podSelector: {}
  policyTypes:
  - Ingress
