infra/network-policies/dev-allow-ingress-from-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"dev-allow-ingress-from-nginx","namespace":"dev"},"spec":{"ingress":[{"from":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.name":"ingress"}},"podSelector":{"matchLabels":{"app.kubernetes.io/component":"controller","app.kubernetes.io/name":"ingress-nginx"}}}],"ports":[{"port":80,"protocol":"TCP"},{"port":8080,"protocol":"TCP"}]}],"podSelector":{},"policyTypes":["Ingress"]}}
  creationTimestamp: "2026-01-30T14:16:10Z"
  generation: 1
  name: dev-allow-ingress-from-nginx
  namespace: dev
  resourceVersion: "1769782570249263023"
  uid: 262a65ac-cf3e-4e21-bd9a-7393818c7d3b
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress
      podSelector:
        matchLabels:
          app.kubernetes.io/component: controller
          app.kubernetes.io/name: ingress-nginx
    ports:
    - port: 80
      protocol: TCP
    - port: 8080
      protocol: TCP
  podSelector: {}
  policyTypes:
  - Ingress
